# sinag

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .lintstagedrc.js  .mcp.json  .npmrc  .prettierignore  .semgrepignore  AGENTS.md  AI_REGENERATE_ISSUE_ANALYSIS.md  CELERY-SETUP.md  CHANGELOG.md  CLAUDE.md  DEV-WORKFLOW.md  DEVOPS_REVIEW.md  DOCKER-OPTIMIZATION-SUMMARY.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SECURITY_AUDIT.md  ERROR_HANDLING_SUMMARY.md  FRONTEND_TEST_FIXES_SUMMARY.md  FRONTEND_TEST_FIX_REPORT.md  GEMINI.md  IMPLEMENTATION-SUMMARY-FAIL-FAST.md  NGINX_IMPLEMENTATION_CHECKLIST.md  NGINX_SETUP_SUMMARY.md  QUICK-START.md  README.md  REDIS-FAIL-FAST-FIX.md  REDIS-SETUP.md  SINGLE-COMMAND-DEV.md  TESTING-REWORK-SUMMARY.md  TEST_FIX_REPORT.md  TEST_FIX_SESSION_2_REPORT.md  TEST_FIX_SESSION_FINAL_REPORT.md  commitlint.config.js  create_complete_test_data.py  create_remaining_validators.py  debug_1566.py  docker-compose.prod.yml  (+9 more)
apps/api/: .env.example  CELERY.md  Dockerfile  README.md  debug_files_v3.py  debug_submission_v2.py  main.py  package.json  pyproject.toml  pytest.ini  run_migration.py  seed_users.py  test_startup_checks.py
apps/api/alembic/: env.py
apps/api/app/api/: deps.py
apps/api/scripts/: backfill_area_results.py  backfill_assessment_indicator_snapshots.py  fix_reopened_assessment_area_status.py  fix_rework_completion.py  recalculate_sglgb_results.py  revert_staging_rework.py  seed_e2e_users.py
apps/api/tests/: conftest.py  test_assessor_workflow_guards.py  test_blgu_feedback_filtering.py  test_spec_v1_4_validation.py
(+1530 files in other folders)
