[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "bcrypt>=4.0.1,<5.0.0", # Pin bcrypt version for compatibility with passlib
    "celery>=5.5.3",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "reportlab>=4.2.0",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.3",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.13",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
follow_imports = "normal"
show_error_codes = true

# Exclude test files, scripts, and migration backups from type checking
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "backup_migrations.*",
]
ignore_errors = true
